# telecoop-common

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
conf/: conf-dist.cfg
docker/app/: Dockerfile
docker/postgres-logs/initdb/: 01-logs.sql
docker/postgres/initdb/: 01-init.sql
src/: cli.py  natsWorker.py  scripts.py
src/telecoopcommon/: #sellsy.py#  .#sellsy.py  __init__.py  bazile.py  config.py  cursor.py  logs.py  models.py  natsWorker.py  operator.py  runner.py  sellsy.py  telecoop.py
src/tests/: test_sellsy.py
tests/: conftest.py  test_operator.py  test_sellsy.py
