[project]
name = "telecoopcommon"
version = "1.25.1"
description = "TeleCoop common libs"
authors = [
    {name = "Pierre Geoffroy",email = "pierreg@telecoop.fr"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "sellsy-api (>=0.0.2,<0.0.3)",
    "pytz (>=2025.1,<2026.0)",
    "requests-oauth2client (>=1.6.0,<2.0.0)",
    "phpserialize (>=1.3,<2.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "nats-py[nkeys] (>=2.9.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
