[metadata]
name = telecoop-common
version = 1.14.0
author = Pierre Geoffroy
author_email = pierreg@telecoop.fr
description = Common lib for TeleCoop services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/telecoop/telecoop-common
project_urls =
    Bug Tracker = https://github.com/telecoop/telecoop-common/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    sellsy_api ==0.0.2
    pytz ==2023.3
    requests_oauth2client ==1.3.0
    phpserialize ==1.3
    nkeys ==0.1.0

[options.packages.find]
where = src
exclude =
    src.tests

[options.extras_require]
dev =
  pytest

[flake8]
extend-ignore = E114,E111
max-line-length = 120
