[metadata]
name = telecoop-common
version = 1.14.0
author = Pierre Geoffroy
author_email = pierreg@telecoop.fr
description = Common lib for TeleCoop services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/telecoop/telecoop-common
project_urls =
    Bug Tracker = https://github.com/telecoop/telecoop-common/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    sellsy_api ==0.0.2
    pytz ==2025.1
    requests_oauth2client ==1.6.0
    phpserialize ==1.3
    pynacl ==1.5.0
    nats-py[nkeys] ==2.9.0
    python-dateutil ==2.9.0.post0

[options.packages.find]
where = src
exclude =
    src.tests

[options.extras_require]
dev =
  pytest
  psycopg2-binary ==2.9.10

[flake8]
extend-ignore = E114,E111
max-line-length = 120
